--- a/cheese.html
+++ b/cheese.html
@@ -30,6 +30,7 @@
       <ul class="page_links">
         <li class="page_links"><a href="./index.html">Home</a></li>
         <li class="page_links"><a href="./inspiration.html">Inspiration</a></li>
+        <li class="page_links"><a href="./music.html">Music</a></li>
         <li class="page_links"><a href="./squirrels.html">Squirrels</a></li>
       </ul>
     </header>
