--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li>Tutorial side</li>
         <ul>
           <li><a href="./tutorials/excel.html">Excel</a></li>
+          <li><a href="./tutorials/c.html">C</a></li>
           <li><a href="#"><del>Security</del></a></li>
         </ul>
       </ul>
