--- a/tutorials/c.html
+++ b/tutorials/c.html
@@ -26,8 +26,8 @@
     </div>
     <header>
       <ul class="page_links">
-        <li class="page_links"><a href="./index.html">Home</a></li>
-        <li class="page_links"><a href="./inspiration.html">Inspiration</a></li>
+        <li class="page_links"><a href="./../index.html">Home</a></li>
+        <li class="page_links"><a href="./../inspiration.html">Inspiration</a></li>
       </ul>
     </header>
     <h1>C Tutorial</h1>
@@ -94,7 +94,7 @@
       <a href="#print"><del>Print to Console</del></a> <br/>
       <a href="#bibliotecas"><del>Libraries</del></a> <br/>
       <a href="#functions"><del>Functions</del></a> <br/>
-      <a href="#examples"><del>Examples from CIT160 book</del></a> <br/>
+      <a href="#examples">Examples from CIT160 book</a> <br/>
       <a href="#prototypes"><del>Prototypes</del></a> <br/>
       <a href=""><del></del></a> <br/>
       <a href=""><del></del></a> <br/>
