--- a/tutorials/excel.html
+++ b/tutorials/excel.html
@@ -29,6 +29,7 @@
     <header>
       <ul class="page_links">
         <li class="page_links"><a href="./../index.html">Home</a></li>
+        <li class="page_links"><a href="./c.html">C Tutorial</a></li>
       </ul>
     </header>
 
