--- a/tutorials/c.html
+++ b/tutorials/c.html
@@ -27,6 +27,7 @@
     <header>
       <ul class="page_links">
         <li class="page_links"><a href="./../index.html">Home</a></li>
+        <li class="page_links"><a href="./excel.html">Excel</a></li>
         <li class="page_links"><a href="./../inspiration.html">Inspiration</a></li>
       </ul>
     </header>
@@ -96,7 +97,7 @@
         <a href="#print"><del>Print to Console</del></a> <br/>
         <a href="#bibliotecas"><del>Libraries</del></a> <br/>
         <a href="#functions"><del>Functions</del></a> <br/>
-        <a href="#examples"><del>Examples from CIT160 book</del></a> <br/>
+        <a href="#examples">Examples from CIT160 book</a> <br/>
         <a href="#prototypes"><del>Prototypes</del></a> <br/>
         <a href=""><del></del></a> <br/>
         <a href=""><del></del></a> <br/>
@@ -106,28 +107,9 @@
         <a href=""><del></del></a> <br/>
       </div>
     </div>
-<<<<<<< HEAD
 
     <div id="construction" class="alert alert-info">
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
-=======
-    <!-- page links -->
-    <div id="content" class="col-lg-3">
-      <p><i>&emsp;Content:</i></p>
-      <a href="#main"><del>Main</del></a> <br/>
-      <a href="#vars"><del>Variables</del></a> <br/>
-      <a href="#print"><del>Print to Console</del></a> <br/>
-      <a href="#bibliotecas"><del>Libraries</del></a> <br/>
-      <a href="#functions"><del>Functions</del></a> <br/>
-      <a href="#examples">Examples from CIT160 book</a> <br/>
-      <a href="#prototypes"><del>Prototypes</del></a> <br/>
-      <a href=""><del></del></a> <br/>
-      <a href=""><del></del></a> <br/>
-      <a href=""><del></del></a> <br/>
-      <a href=""><del></del></a> <br/>
-      <a href=""><del></del></a> <br/>
-      <a href=""><del></del></a> <br/>
->>>>>>> a5613b7f78f02bdaf4f8abec58026ee2a4798381
     </div>
 
     <footer>
